fix issues of content alignment at tablet size

--- a/source/styles/_layout.scss
+++ b/source/styles/_layout.scss
@@ -7,6 +7,10 @@ body {
 	overflow: hidden;
 }
 
+.clear {
+	clear: both;
+}
+
 *[class^="col-"], *[class*=" col-"] {
 	box-sizing:border-box;
 	//padding:10px;
